# pgaccel_old

./: CMakeLists.txt  README.md  column_data.cc  column_data.hpp  columnar_table.cc  columnar_table.h  executor.h  ops.hpp  parser.cc  parser.h  pgaccel.cc  result_type.hpp  types.cc  types.hpp  util.cc  util.h  util.hpp
src/: avx_traits.hpp  column_data.cc  column_data.hpp  columnar_table.cc  columnar_table.h  executor.cc  executor.h  executor_filter_compare.cc  executor_filter_compose.cc  executor_filter_count.cc  executor_groupby.cc  executor_groupby.h  executor_sum.cc  nodes.cc  nodes.h  parquet_import.cc  parquet_import.hpp  parser.cc  parser.h  result_type.hpp  types.cc  types.hpp  util.h
tests/: pgaccel_tests.cc
touca_tests/: run.sh  touca_tests.cc
touca_tests/queries/: groupby-sum.testql  groupby.testql  q6-count.testql
